RESOLVED FIXED153555
[FTL][Win64] Compile fix.
https://bugs.webkit.org/show_bug.cgi?id=153555
Summary [FTL][Win64] Compile fix.
peavo
Reported 2016-01-27 12:49:09 PST
When compiling FTLOSRExitCompiler.cpp, I get the following error: FTLOSRExitCompiler.cpp(585): error C2121: '#': invalid character: possibly the result of a macro expansion FTLOSRExitCompiler.cpp(570): error C2059: syntax error: 'if' MSVC does not accept preprocessor conditionals in macros, it seems.
Attachments
Patch (2.20 KB, patch)
2016-01-27 12:54 PST, peavo
achristensen: review+
peavo
Comment 1 2016-01-27 12:54:14 PST
Alex Christensen
Comment 2 2016-01-27 13:10:53 PST
Comment on attachment 270026 [details] Patch I'm surprised other compilers accept this.
peavo
Comment 3 2016-01-27 13:29:28 PST
(In reply to comment #2) > Comment on attachment 270026 [details] > Patch > > I'm surprised other compilers accept this. Yes, I am not sure what the standards says about this case. Thanks for reviewing :)
peavo
Comment 4 2016-01-27 14:10:16 PST
Note You need to log in before you can comment on or make changes to this bug.