[FTL][Win64] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=153555

Reviewed by Alex Christensen.

MSVC does not accept preprocessor conditionals in macros.

* ftl/FTLOSRExitCompiler.cpp:
(JSC::FTL::compileStub):


Canonical link: https://commits.webkit.org/171629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195691 268f45cc-cd09-0410-ab3c-d52691b4dbfc